# pi

./: .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  Pipfile  README.md  TODO.md  ZFS_MIGRATION_GUIDE.md  ZFS_QUICK_REFERENCE.md  ansible.cfg  cleanup.yml  distribute_ssh_key.yml  egpu.md  fix_hass_bluetooth.yml  get_ssh_key.yml  hardware-upgrade.md  inventory  pcie.md  prep_pi.yml  prep_pihole.yml  pyproject.toml  requirements.yml  setup.yml  skills-lock.json
.codex/: config.toml
docs/: ai-generated-media-archival.md  ops-user-migration.md  qwen36-27b-prompt-processing-benchmark-2026-07-11.md
group_vars/: ailab.yml  ailab_ubuntus.yml  ailabs.yml  dashserv.yml  hetzner.yml  homelab.yml  nameserver.yml  pihole.yml
group_vars/ailab_ubuntus/: llms.yml
group_vars/all/: config.yml  dhcp.yml  dns.yml  domains.yml  hermes_ailab_secrets.yml  llama-swap-tts.yml  llms.yml  ports.yml  satellites.yml  secrets.yml  services.yml  tailscale.yml
host_vars/: ailab-ubuntu.yml  ailab.yml
host_vars/homelab-nuc/: zfs.yml
roles/autosuspend/handlers/: main.yml
roles/autosuspend/tasks/: main.yml
roles/hermes_docker/: README.md
roles/llm/: README.md
roles/llm_tools/: README.md
roles/metamcp/: README.md
roles/mic-satellite/: Dockerfile
roles/n8n/: README.md
roles/ollama/: Dockerfile.mcp-proxy
roles/ollama_arc/: Dockerfile.portable  start-vllm-service.sh
roles/ssh_keys/: README.md
roles/teslamate/: README.md
roles/zfs/: README.md
todo/: backups.md  dns.md  tailscale.md  traefik.md
todo/scripts/: llm_benchmark.py
(+267 files in other folders)
