[project]
name = "pi-homelab"
version = "0.0.1"
requires-python = "~=3.12.0"
dependencies = [
    "ansible",
    "netaddr",
    "passlib",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.2.1",
    "ipykernel",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
